--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,8 +1,6 @@
 {
-  "name": "AshishLoginTestApp",
+  "name": "",
   "app_id": "678bb90a",
-  "type": "ionic-angular",
-  "integrations": {
-    "cordova": {}
-  }
+  "integrations": {},
+  "type": "ionic-angular"
 }
